some bugs on mobile fixed

--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -16,18 +16,21 @@ body{
 #addNew {
     position: relative;
     text-align: center;
+    padding-bottom: 40px;
 }
 
 
 #inputfield{
     width: 60%;
-    height: 40px;
+    height: 30%;
+    min-height: 35px;
     padding: 2px;
     border-color:transparent;
     outline: none;
     -webkit-tap-highlight-color: transparent;
     vertical-align: middle;
     font-size: large;
+    margin-bottom: auto;
     text-indent: 20px;
     border-radius: 30px;
 }
@@ -37,14 +40,17 @@ body{
     border-color:transparent;
     background-color: honeydew;
     outline: none;
+    margin-bottom: auto;
     font-style:normal;
     font-size: medium;
     -webkit-tap-highlight-color: transparent;
     width: 17%;
-    height: 47.5px;
+    height: 39%;
+    min-height: 37px;
     vertical-align: middle;
     border-radius: 30px;
 }
+
 #Name{
     text-align: center;
     color: blanchedalmond;
@@ -55,20 +61,23 @@ body{
 #listContainer{
     position: relative;
     width: 60%;
+    min-width: 200px;
     display: flex;
     height: auto;
+    margin-top: auto;
     place-self: center;
     flex-direction: column;
     place-items: center; 
     text-align: center;
     justify-content: center;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     min-height: 500px;
     padding: 20px;
     background-color:gainsboro;
     border-radius: 10px;
 
 }
+
 #toDoList{
   display: flex;
   justify-self: flex-start;
@@ -77,6 +86,7 @@ body{
   flex-direction: column;
   width: 100%;
 }
+
 #emptyCase{
     place-self: center;
     display: blox;
@@ -132,7 +142,7 @@ body{
     background-color: rgb(158, 226, 238);
     margin-top:100px;
     border-radius: 30px;
-    width: 50%;
+    width: 70%;
     height: 150px;
 }
 
@@ -165,14 +175,15 @@ body{
     font-style:normal;
     font-size: medium;
     -webkit-tap-highlight-color: transparent;
-    width: 17%;
+    min-width: 20px;
+    width: 20%;
     height: 47.5px;
     vertical-align: middle;
     border-radius: 30px;
 }
 
 #modalClose{
-    margin-left: 95%;    
+    margin-left: 90%;    
     margin-top: 20px;
     font-size: 28px;
     font-weight: bolder;
@@ -193,7 +204,8 @@ body{
     color: white;
     font-style:normal;
     -webkit-tap-highlight-color: transparent;
-    width: 17%;
+    width: 20%;
+    min-width: 55px;
     height: 35px;
     vertical-align: middle;
     border-radius: 30px;
@@ -208,7 +220,8 @@ body{
     color: white;
     font-style:normal;
     -webkit-tap-highlight-color: transparent;
-    width: 17%;
+    width: 20%;
+    min-width: 45px;
     height: 35px;
     vertical-align: middle;
     border-radius: 30px;
@@ -223,7 +236,8 @@ body{
     color: white;
     font-style:normal;
     -webkit-tap-highlight-color: transparent;
-    width: 17%;
+    width: 20%;
+    min-width: 50px;
     height: 35px;
     vertical-align: middle;
     border-radius: 30px;
